// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AnswerPage/> renders as expected 1`] = `
<div
  className="answer-page-container"
>
  <h1
    className="answer-page-text"
  >
    The word was:
  </h1>
  <p
    className="answer-word"
  />
</div>
`;

exports[`<AnswerPage/> renders nothing when no props given 1`] = `
<div
  className="answer-page-container"
>
  <h1
    className="answer-page-text"
  >
    The word was:
  </h1>
  <p
    className="answer-word"
  />
</div>
`;

exports[`<AnswerPage/> renders with answer prop when given 1`] = `
<div
  className="answer-page-container"
>
  <h1
    className="answer-page-text"
  >
    The word was:
  </h1>
  <p
    className="answer-word"
  >
    blue
  </p>
</div>
`;
